<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">P5_18</string>
    <string name="action_settings">Settings</string>
    <string name="titulo">Cadastro de Alunos</string>
    <string name="tela1">Tela 1</string>
    <string name="tela2">Tela 2</string>
    <string name="tela3">Tela 3</string>
    <string name="avancar">avancar</string>
    <string name="retornar">retornar</string>
    <string name="nome">Nome:</string>
    <string name="email">Email:</string>
    <string name="curso">Curso:</string>
    <string name="escola">Escola:</string>
    <string name="inNome">Julio Leme</string>
    <string name="inEmail">julioromao@hotmail.com</string>
    <string name="inCurso">Android</string>
    <string name="inEscola">Wincomp</string>
    <string name="status"></string>

</resources>