<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/mTitulo"
        android:title="@string/titulo"/>
    <item
        android:id="@+id/mTela2"
        android:title="@string/tela2"/>
    <item
        android:id="@+id/mStatus"
        android:title="@string/status"/>
    <item
        android:id="@+id/mCurso"
        android:title="@string/curso"/>
    <item
        android:id="@+id/mInCurso"
        android:title="@string/inCurso"/>
    <item
        android:id="@+id/mEscola"
        android:title="@string/escola"/>
    <item
        android:id="@+id/mInEscola"
        android:title="@string/inEscola"/>
    <item
        android:id="@+id/mButtonAvancar"
        android:title="@string/avancar"/>

</menu>