<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.MainActivity2"
    tools:ignore="MergeRootFrame,UnknownIdInLayout" >

    <TextView
        android:id="@+id/mTela2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/tela2" />
    
    <TextView
        android:id="@+id/mStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/mTela2"
        android:text="@string/status" />

    <TextView
        android:id="@+id/mCurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/mStatus"
        android:text="@string/curso" />

    <EditText
        android:id="@+id/mInCurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mEmail"
        android:layout_alignRight="@+id/mInCurso"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:orientation="horizontal"
        android:text="@string/inCurso"
        android:layout_below="@+id/mCurso"
        tools:ignore="TextFields,RtlHardcoded,LabelFor" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/mEscola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/mInCurso"
        android:text="@string/escola" />

    <EditText
        android:id="@+id/mInEscola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mEscola"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:inputType="text"
        android:layout_below="@+id/mEscola"
        android:orientation="horizontal"
        android:text="@string/inEscola"
        tools:ignore="RtlHardcoded,LabelFor,TextFields" >

        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/mButtonAvancar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mInEscola"
        android:text="@string/avancar" />

    <Button
        android:id="@+id/mButtonRetornar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mButtonAvancar"
        android:text="@string/retornar" />

</RelativeLayout>